# json5-to-json

./: Cargo.toml  mise.toml
.github/workflows/: release.yml
src/: lib.rs  main.rs
tests/: cli.rs  unit.rs
