[package]
name = "json5-to-json"
version = "0.2.0"
description = "A tool for converting JSON5 to plain JSON."
license = "ISC"
repository = "https://github.com/adamdicarlo/json5-to-json"
readme = "README.md"
keywords = ["json5", "to", "json", "translate", "convert"]
edition = "2021"

[dev-dependencies]
assert_cmd = "2.2"
predicates = "3"
tempfile = "3"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
json5 = "1.3"
serde = "1.0"
serde_json = "1.0"
